--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,13 @@
 
 body {
   background-color: #fafaee;
-
+  background-image: linear-gradient(
+      90deg,
+      rgba(128, 110, 96, 0.1) 1px,
+      transparent 1px
+    ),
+    linear-gradient(rgba(128, 110, 96, 0.1) 1px, transparent 1px); /* Grid pattern */
+  background-size: 20px 20px; /* Size of each grid cell */
   position: fixed;
   top: 30px;
   left: 30px;
