--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
 
 body {
   background-color: #fafaee;
+  /* background-color: #2ac080; */
   background-image: linear-gradient(
       90deg,
       rgba(128, 110, 96, 0.1) 1px,
@@ -32,6 +33,11 @@ body {
 
 .custom-shadow {
   box-shadow: 10px 10px 0 0 rgba(0, 0, 0, 1); /* Adjust the shadow size and color here */
+}
+
+.outline-text {
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: black;
 }
 
 /* About button animation */
