--- a/src/components/CardDeck/CardDeck.css
+++ b/src/components/CardDeck/CardDeck.css
@@ -1,20 +1,11 @@
-.expanded {
-  transition: all 0.3s ease;
-  width: 96px;
-  height: 144px;
-  overflow: hidden;
+.card-results {
+  background-color: #fafaee;
+  border-width: 1.5px;
+  border-color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-
-.animate-jiggle {
-  animation: jiggle 0.5s infinite;
-}
-
-@keyframes jiggle {
-  0%,
-  100% {
-    transform: rotate(-3deg);
-  }
-  50% {
-    transform: rotate(3deg);
-  }
+.results-text {
+  font-size: 14px;
 }
