--- a/src/App.css
+++ b/src/App.css
@@ -33,13 +33,15 @@ body {
     ),
     linear-gradient(rgba(128, 110, 96, 0.1) 1px, transparent 1px);
   background-size: 20px 20px;
-  /* position: fixed;
+  position: fixed;
   top: 30px;
   left: 30px;
   right: 30px;
-  bottom: 30px; */
-  /* border: 3px solid black; */
+  bottom: 30px;
+  border: 3px solid black;
   border-radius: 20px;
+  /* height: 100vh;
+  width: 100vw; */
   overflow: hidden;
 }
 
